Closed Bug 378692 Opened 18 years ago Closed 18 years ago

warning C4099: 'OnLinkClickEvent' : type name first seen using 'struct' now seen using 'class'

Categories

(Core :: DOM: Navigation, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

c:/home/mozilla.org/mozilla/docshell/base/nsWebShell.cpp(714) : warning C4099: 'OnLinkClickEvent' : type name first seen using 'struct' now seen using 'class' c:\home\mozilla.org\mozilla\docshell\base\nsWebShell.h(52) : see declaration of 'OnLinkClickEvent'
Attached patch call it a classSplinter Review
Attachment #262714 - Flags: superreview?(cbiesinger)
Attachment #262714 - Flags: review?(cbiesinger)
Attachment #262714 - Flags: superreview?(cbiesinger)
Attachment #262714 - Flags: superreview+
Attachment #262714 - Flags: review?(cbiesinger)
Attachment #262714 - Flags: review+
This causes a crash?
mozilla/docshell/base/nsWebShell.h 1.43
Severity: critical → normal
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: crash
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: