Bug 378692 warning C4099: 'OnLinkClickEvent' : type name first seen using 'struct' now seen using 'class'r=bz sr=bz